--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -1549,7 +1549,7 @@ msgid ""
 "about these lands, I'm afraid you'll need someone who knows them better than "
 "you!"
 msgstr ""
-"Hej, jediní, kdo se tu chová jako zvěř jste vy, wesnoťani! Tohle je Fangy, "
+"Hej, jediní, kdo se tu chová jako zvěř, jste vy, wesnoťani! Tohle je Fangy, "
 "moje malá domácí fenka. Drží krysy a skřety daleko od našeho krásného lesa. "
 "Hm, ach! Protože jste se sem přišli se vypořádat s Gruntem, budu vám muset "
 "pomoct. Furt mě žere, jak ukradl Fangy její poslední vrh, aby měl jezdecká "
