--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -1553,7 +1553,7 @@ msgstr ""
 "moje malá domácí fenka. Drží krysy a skřety daleko od našeho krásného lesa. "
 "Hm, ach! Protože jste se sem přišli se vypořádat s Gruntem, budu vám muset "
 "pomoct. Furt mě žere, jak ukradl Fangy její poslední vrh, aby měl jezdecká "
-"zvířata pro svoje gobliny. A protože zápaďáci z města jako vy toho o těhle "
+"zvířata pro svoje gobliny. A protože zápaďáci z města jako vy toho o těchhle "
 "zemích moc vědět nemůžou, obávám se, že budete potřebovat někoho, kdo je zná "
 "líp než vy!"
 
