try to remove some repeating words

--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -1571,8 +1571,8 @@ msgid ""
 "Have you listened, my dear? This Wesnothian lout is not so loutish, finally! "
 "Come on then, it will be fun!"
 msgstr ""
-"Slyšelas, miláčku? Tenhle wesnothský klacek nakonec není takový hrubián! "
-"Tak pojďte, bude sranda!"
+"Slyšelas, miláčku? Tenhle wesnothský klacek nakonec není takový hrubián! Tak "
+"pojďte, bude sranda!"
 
 #. [message]: speaker=Fangy
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:352
@@ -2508,9 +2508,9 @@ msgstr ""
 "Wesnothu sahají daleko za Východní vrchy!\n"
 "Vše začalo, když královna Lisar, jež nově usedla na trůn, zorganizovala "
 "sérii expedic, které obepluly kontinent Irdya, aby určily jeho rozlohu a "
-"určily podobu jeho pobřeží. Jedna z těchto výprav, které velel admirál "
+"zjistily podobu jeho pobřeží. Jedna z těchto výprav, které velel admirál "
 "Abelardo Gozman, opustila Elensefar na jaře roku 520 w. l. a zamířila na "
-"sever. Po téměř dvouleté cestě, kterou téměř celou strávila průzkumy a "
+"sever. Po téměř dvouleté cestě, kterou skoro celou strávila průzkumy a "
 "výzkumy ve studených severských mořích, se Gozmanova výprava dostala k "
 "východnímu pobřeží kontinentu a poté i k malé zátoce u ústí řeky, obývané "
 "malou komunitou mořských nymf – Nereid.\n"
@@ -2622,9 +2622,9 @@ msgid ""
 "Instead it survived, and... another day, another time, the wind changed!"
 msgstr ""
 "Wesnothským šlechticům a boháčům se jantar omrzel. Pro své vlastní potěšení, "
-"ješitnost svých laskavých manželek a potěšení svých horlivých milenek začali "
+"marnivost svých laskavých manželek a radost svých horlivých milenek začali "
 "dávat přednost pestrobarevným drahým kamenům, které trpaslíci kutali ze "
-"svých hor a které bylo možné získat snadněji než jantar, který se jim "
+"svých hor a které bylo možné získat snadněji než jantar, jenž se jim "
 "dostával do rukou s mnohem většími peripetiemi.\n"
 "S poklesem a nakonec i zastavením dopravy jantaru upadal i Amoran, pomalu a "
 "důstojně jako stará dáma. Počet obyvatel postupně ubýval, živnosti končily, "
@@ -2673,7 +2673,8 @@ msgstr ""
 "počáteční sklíčení, které v něm vyvolal rezignovaný vzhled města a mizerné "
 "složení posádky pod jeho velením. Ale pak si vyhrnul rukávy a řekl si: při "
 "první příležitosti ukážu svou cenu! Po několika velmi dlouhých a velmi "
-"nudných měsících se konečně naskytla příležitost. Nebyla ale vůbec přívětivá."
+"nudných měsících se konečně taková šance naskytla. Nebyla ale vůbec "
+"přívětivá."
 
 # Třetí věta je hrozně šroubovaná.
 #. yes, the third sentence here is kind of a run-on; suggestions on how to reword it are welcome:
