--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2022-02-21 22:56 UTC\n"
-"PO-Revision-Date: 2022-02-25 22:14+0100\n"
+"PO-Revision-Date: 2022-03-06 20:43+0100\n"
 "Last-Translator: Septim <septim@centrum.cz>\n"
 "Language-Team: Czech https://wiki.wesnoth.org/CzechTranslation\n"
 "Language: cs\n"
@@ -456,8 +456,8 @@ msgid ""
 "What this confusion? Men colored like wetspot and snake to fight? Ogres to "
 "come too, good chance to squash all!"
 msgstr ""
-"Co to být za zmatek? Muži s wesnotíma barvama mít velkou pračku s "
-"hadovitýma? Obři, jít sem taky. Dobrá šance podrtit ty i ty!"
+"Co to být za zmatek? Muži s wetspot barvama mít velká pračka s hadama? Obři, "
+"jít sem taky. Dobrá šance podrtit ty i ty!"
 
 #. [objective]: condition=lose
 #: A_Little_Adventure/scenarios/03_The_Nagas_Nest.cfg:214
@@ -475,7 +475,7 @@ msgstr "království Wesnoth – přepřahací stanice č. 2"
 #. [message]: speaker=Kssihiss
 #: A_Little_Adventure/scenarios/03_The_Nagas_Nest.cfg:271
 msgid "Damned humansss... Hiss!"
-msgstr ""
+msgstr "Zzatraccený lidsský... Ass!"
 
 #. [scenario]: id=04_The_Bloody_Hills
 #: A_Little_Adventure/scenarios/04_The_Bloody_Hills.cfg:5
@@ -589,7 +589,7 @@ msgstr "Nereidy"
 #. [objective]: condition=win
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:102
 msgid "Squash... or... Defeat the Saurian Chief"
-msgstr ""
+msgstr "Vytlač nebo poraz ještěráckého vůdce"
 
 #. [message]: speaker=Giksy
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:201
@@ -629,7 +629,7 @@ msgstr ""
 #. [message]: speaker=Giksy
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:247
 msgid "Aaah... I'll... never... sssee... my... treasssure... again..."
-msgstr ""
+msgstr "Aaah... Užžž... nikdy... nezzzřím... zzzasss... sssvůj... poklad..."
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/scenarios/05_The_Lizards_Islands.cfg:280
@@ -669,7 +669,7 @@ msgstr "Ti zatracenci jsou všichni mrtví nebo uprchli! Konečně jsme hotovi!"
 #. [message]: speaker=Gan-Tarkas
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:489
 msgid "Impossible!"
-msgstr ""
+msgstr "Nemožný!"
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:493
@@ -679,22 +679,22 @@ msgstr "S tvým koncem, skřete, může a bude mít Amoran novou budoucnost!"
 #. [message]: speaker=Glubtrub
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:508
 msgid "To remain only to squash big snake!"
-msgstr ""
+msgstr "Jen velký had zbývat rozmáčknout!"
 
 #. [message]: speaker=Hisskss
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:524
 msgid "Hissss!"
-msgstr ""
+msgstr "Assss!"
 
 #. [message]: speaker=Glubtrub
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:532
 msgid "Other snake make flat-flat! Oh! Oh! Oh!"
-msgstr ""
+msgstr "Další had ležet jak kláda! Hó! Hó! Hó!"
 
 #. [message]: speaker=Geobard
 #: A_Little_Adventure/scenarios/06_The_Last_Battle.cfg:541
 msgid "And now let's finish taking care of his friend, Gan-Tarkas!"
-msgstr ""
+msgstr "A teď to pojďme dokončit s jeho kámošem Gan-Tarkasem!"
 
 #. [scenario]: id=07_Epilogue
 #: A_Little_Adventure/scenarios/07_Epilogue.cfg:5
@@ -1671,6 +1671,8 @@ msgid ""
 "Humansss? After all thisss time they wantsss to reconquessst this place? "
 "They'll find only their deathsss!"
 msgstr ""
+"Lidsský? To vššem to ččassse chtějí zznovu obssadit tohle míssto? Najdou jen "
+"sssvou ssmrt!"
 
 #. [message]: speaker=Kssihiss
 #. probably meant "land mammal" here, but "lard mammal" makes sense, too, and is funnier:
@@ -1679,6 +1681,8 @@ msgid ""
 "Ssstupid lard mammal, ssstay out of thisss ssstory or you won't be able to "
 "get out!"
 msgstr ""
+"Sstupidní ssavčí ssádelňácci, držžte ssse mimo tuhle zzáležžitosst, nebo "
+"ssse z ní nevyssoukáte ven!"
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:402
@@ -1698,7 +1702,7 @@ msgid ""
 "friends ogres... I believe... I don't remember well!"
 msgstr ""
 "Glubtrub nemít rád hady! Málo tuku k jídlu, a ne moc dobré! Chtít zabít naše "
-"malé, když si hrát poblíž ruin! Ale voják Wesnoth barvy nikdy nebýt přítel "
+"malé, když si hrát poblíž ruin! Ale voják Wetspot barvy nikdy nebýt přítel "
 "obrů... Já věřit... Nepamatovat si moc!"
 
 #. [message]: speaker=Glauco
@@ -1757,12 +1761,15 @@ msgstr ""
 msgid "The station is free, and the river, too! Good work, my soldiers!"
 msgstr "Stanice je volná a řeka také! Dobrá práce, mí vojáci!"
 
+# Úplně cítím, jak se mi snižuje inteligence, když to překládám.
 #. [message]: speaker=Glubtrub
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:438
 msgid ""
 "Nice! Snakes make flat like sole into the river, flat-flat! You like me, man "
 "of Wetspot! I to come with you, and together to come to squash world!"
 msgstr ""
+"Pěkný! Hadi pleskat o zem, jak když šlápnout do řeka, ležet tuhý jak kláda! "
+"My mít se rádi s muž z Wetspot! Jít s vámi, spolu jít a mačkat svět!"
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:442
@@ -1771,6 +1778,9 @@ msgid ""
 "around... to squash; I'm on a mission with a specific purpose... in general, "
 "we only fight the enemies of Wesnoth!"
 msgstr ""
+"Err... jasně, také se mi líbíš, Glubtrube. Ale já se nechystám... něco "
+"mačkat. Jsem na misi s konkrétním účelem... Obecně, my bojujeme pouze s "
+"nepřáteli Wesnothu!"
 
 #. [message]: speaker=Glubtrub
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:446
@@ -1778,6 +1788,8 @@ msgid ""
 "More better! To like more to eat and to sleep than to fight! But... how to "
 "be enemies of Wetspot? Be edible?"
 msgstr ""
+"Ještě lepší! Mít rád více jíst a spát než bojovat! Ale... jak se to být s "
+"nepříteli Wetspot? Být k jídlu?"
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:450
@@ -1787,6 +1799,9 @@ msgid ""
 "and don't respect its laws, or those who want to take possession of the "
 "goods or of the life of the inhabitants of Wesnoth."
 msgstr ""
+"Nu... tedy... obvykle ne... předpokládám. Nicméně, nepřáteli Wetspotu... eh "
+"Wesnothu by mohli být ti, kteří žijí na území Wesnothu a nerespektují jeho "
+"zákony, nebo ti, kteří se chtějí zmocnit zboží nebo života obyvatel Wesnothu."
 
 #. [message]: speaker=Glubtrub
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:454
@@ -1795,6 +1810,9 @@ msgid ""
 "things, OH OH OH! We to do so, you to say me who is enemy of Wetspot, and I "
 "to squash him!"
 msgstr ""
+"...chápat... nic nechápat! Ale to být dobře, nezvyknout věcem rozumět, hó hó "
+"hó! Abychom to udělat dobře, ty řeknout mi, kdo nepřítel Wetspot, a já "
+"rozmáčknout!"
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:458
@@ -1802,6 +1820,8 @@ msgid ""
 "Beh, I suppose that can be acceptable in this way! Glad to have you with us, "
 "Glubtrub, your strength will be useful to us!"
 msgstr ""
+"Nu, připouštím, že to takto může být přijatelné. Jsme rádi, že jsi s námi, "
+"Glubtrube, tvoje síla se nám bude hodit!"
 
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:463
 msgid ""
@@ -1810,6 +1830,10 @@ msgid ""
 "even more wild in those mountains), we have just to find a road that leads "
 "us on the other side of this territorry, through the bloody hills."
 msgstr ""
+"Takže, pánové, protože nechcete strávit pár týdnů lezením po horách, co jsou "
+"dále na jihu (což je podle mě dobrý nápad, protože divočina je tam ještě "
+"divočejší), musíme najít cestu, která nás dovede na druhou stranu tohoto "
+"území, a to přes krvavé kopce."
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:466
@@ -1817,6 +1841,8 @@ msgid ""
 "What's the problem? The season is good, the weather is beautiful, and these "
 "hills were safe when the amber caravans passed through them!"
 msgstr ""
+"A co je za problém? Roční doba je příznivá, počasí krásné a ty kopce byly "
+"bezpečné, když jimi projížděly karavany s jantarem!"
 
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:468
 msgid ""
@@ -1827,11 +1853,16 @@ msgid ""
 "with the caravan workers; when the caravans ceased, the dwarves raised their "
 "heels and left!"
 msgstr ""
+"Škoda, že ty časy skončily dříve, než jste se narodil, veliteli! V minulosti "
+"byla cesta klidná, protože těch pár zbývajících trpaslíků žilo v dolech, "
+"které těžili po staletí. Ty doly byly chvíli vyčerpané, ale někteří "
+"trpaslíci stále byli schopni vytěžit něco, co jim umožnilo obchodovat "
+"s karavanami. Když přestaly karavany chodit, zvedli trpaslíci zadky a odešli!"
 
 #. [message]: speaker=Geobard
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:471
 msgid "Better, so they will not try to charge us any toll!"
-msgstr ""
+msgstr "To je ještě lepší, nebudou se nám snažit účtovat žádné mýtné!"
 
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:473
 msgid ""
@@ -1842,12 +1873,17 @@ msgid ""
 "there, and those have become the home of bats of all kinds, including the "
 "worst types of course!"
 msgstr ""
+"Chtěl jsi říct horší! Opuštěné doly se staly doupaty vlků, včetně pravlků, a "
+"ti během dne vycházejí útočit na vetřelce, tedy takové, jako jsme my. A "
+"k tomu ještě zřícení nějakého komplexu tunelů, které již trpaslíci "
+"neudržují, sem tam otevřelo propasti, které se staly domovem netopýrů všech "
+"druhů, samozřejmě včetně těch nejhorších!"
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:476
 msgid ""
 "Of course! At least now we know why these place is called the Bloody Hills!"
-msgstr ""
+msgstr "No samozřejmě! Teď alespoň víme, proč se těm místům říká Krvavé kopce!"
 
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:478
 msgid ""
@@ -1857,16 +1893,21 @@ msgid ""
 "wind dispersed those rusty powders all the hills took on a blood tinge, "
 "until it rained! Anyway, my proposal is to cross them as fast as possible!"
 msgstr ""
+"Ale vůbec ne! Jméno pochází z doby před staletími, kdy trpaslíci začali "
+"těžit ložiska železa pod kopci. Hlušina, kterou trpaslíci nashromáždili "
+"venku, je plná železného prachu, a když vítr rozptýlil ty rezavé prášky, "
+"chytly všechny kopce krvavý nádech, dokud neopršely! Každopádně můj návrh je "
+"překročit je co nejrychleji!"
 
 #. [message]: speaker=Glauco
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:481
 msgid "It seems like a great idea to me!"
-msgstr ""
+msgstr "To mi přijde jako výtečný nápad!"
 
 #. [message]: speaker=Glubtrub
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:485
 msgid "Glubtrub to think the same!"
-msgstr ""
+msgstr "Glubtrub myslet to samé!"
 
 #: A_Little_Adventure/utils/ALA_dialogues.cfg:487
 msgid ""
@@ -2724,6 +2765,16 @@ msgid ""
 "sergeant. A campaign in hostile territory, against forces with only partly-"
 "known numbers, was, however, risky and full of unknowns."
 msgstr ""
+"Poté, co se Dadokova banda ocitla mimo hru, se Glauko, povzbuzen dosaženým "
+"vítězstvím a svými novými velitelskými výsadami, rozhodl čelit alespoň "
+"jednomu z dalších problémů Amoranu, a to skřetovi Gruntovi. Protože Grunto "
+"nebyl členem kmenů spojených se Severní aliancí, bylo nepravděpodobné, že by "
+"mu jiný skřetí náčelníci pomohli. A zvláště teď, když už byl poražen v "
+"předchozí bitvě, a tak mohl vidět, jak jeho pověst mezi skřety padá jak to "
+"lejno do trollí latríny. Toto povzbuzení však pro mladého seržanta "
+"neznamenalo, že by přestal být obezřetným. Neboť tažení na nepřátelském "
+"území proti neznámému počtu sil protivníka bylo stále riskantní a plné "
+"nejistot."
 
 #: A_Little_Adventure/utils/ALA_story.cfg:53
 msgid ""
@@ -2739,6 +2790,17 @@ msgid ""
 "garrison was left to Amoran, so that it would recover from the fatigue of "
 "the previous battle and watch over the town against any nasty surprises!"
 msgstr ""
+"Glauko se tedy rozhodl spoléhat pouze na profesionální vojáky, kteří tváří v "
+"tvář divokému zjevu skřetů nepropadnou panice. Když konečně překročil brod u "
+"Amoranu, měl nejen spolehlivé vojáky (i když ne příliš zkušené), ale také "
+"úplně vyprázdněnou posádkovou kasu, stejně jako své kapsy. Na druhou stranu "
+"je třeba uvést, že když si odvážný mladík vyžádal odměnu za Dadokovu hlavu, "
+"raději investoval do kopí, válečných lučištníků a zbroje, než aby to zlato "
+"utratil příjemnějšími způsoby. Ty by ovšem také přinášely menší prospěch pro "
+"zachování jeho života vzhledem k podniku, do kterého se vrhnul. Z opatrnosti "
+"byla sestava, co zbyla z původní posádky, ponechána v Amoranu, aby se "
+"vzpamatovala z únavy předchozí bitvy a hlídala město před případnými "
+"nepříjemnými překvapeními!"
 
 #: A_Little_Adventure/utils/ALA_story.cfg:57
 msgid ""
