--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2788,7 +2788,7 @@ msgstr ""
 "vítězstvím a svými novými velitelskými výsadami, rozhodl čelit alespoň "
 "jednomu z dalších problémů Amoranu, a to skřetovi Gruntovi. Protože Grunto "
 "nebyl členem kmenů spojených se Severní aliancí, bylo nepravděpodobné, že by "
-"mu jiný skřetí náčelníci pomohli. A zvláště teď, když už byl poražen v "
+"mu jiní skřetí náčelníci pomohli. A zvláště teď, když už byl poražen v "
 "předchozí bitvě, a tak mohl vidět, jak jeho pověst mezi skřety padá jak to "
 "lejno do trollí latríny. Toto povzbuzení však pro mladého seržanta "
 "neznamenalo, že by přestal být obezřetným. Neboť tažení na nepřátelském "
