--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2858,7 +2858,7 @@ msgid ""
 "the river."
 msgstr ""
 "Po porážce skřetů i banditů by měl žít Amoran v klidu, alespoň dokud se "
-"nějací skřetí náčelníci nerozhodnou usadit se na Gruntovo území, nebo dokud "
+"nějací skřetí náčelníci nerozhodnou usadit se na Gruntovo území nebo dokud "
 "nepovstane nový šéf banditů. Glauko uvažoval, že je ten správný čas pokusit "
 "se obnovit Jantarovou cestu. Otázkou bylo, jak na to? Jantarová řeka byla "
 "hluboká a splavná od východního pobřeží kontinentu po Amoran. Ale sloužila "
