--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2880,7 +2880,7 @@ msgstr ""
 "Jedinou alternativou byla stará karavanní stezka, která po většinu své cesty "
 "kopírovala tok řeky. Ale stezka byla v katastrofálním stavu, stanice byly "
 "desítky let opuštěné a o jejich stavu se nic nevědělo, i když se dalo lehce "
-"předpokládat, že jejich stav dobrý nebude. Zkrátka obnovení karavanní stezky "
+"předpokládat, že dobrý nebude. Zkrátka obnovení karavanní stezky "
 "by stálo jmění, které by wesnothská vláda nepřidělila. Ale Glauco měl nápad, "
 "jak obejít všechny tyto problémy, jen ten nápad vyžadoval obnovení kontaktů "
 "s východními Nereidami."
