--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2902,7 +2902,7 @@ msgstr ""
 "předpokládat, že dobrý nebude. Zkrátka obnovení karavanní stezky by stálo "
 "jmění, které by wesnothská vláda nepřidělila. Ale Glauco měl nápad, jak "
 "obejít všechny tyto problémy, jen ten nápad vyžadoval obnovení kontaktů s "
-"východními Nereidami."
+"východními nereidami."
 
 #: A_Little_Adventure/utils/ALA_story.cfg:69
 msgid ""
