--- a/translations/it/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/it/LC_MESSAGES/wesnoth-ala.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-03-13 14:58 UTC\n"
+"POT-Creation-Date: 2022-03-13 15:18 UTC\n"
 "PO-Revision-Date: 2021-02-08 20:53+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -908,8 +908,8 @@ msgid ""
 "A bit less stupid than their male counterparts, the ogre females spend the "
 "first part of their lives learning how use herbs and minerals to cure wound "
 "and poisons, and secondly, how to apply this knowledge to the male ogres. "
-"They don't like iron weapons, but rather, they efficently use small but hard "
-"clubs of wood, and leather slings, to defend themselves."
+"They don't like iron weapons, but rather, they efficiently use small but "
+"hard clubs of wood, and leather slings, to defend themselves."
 msgstr ""
 
 #. [attack]: type=impact
