--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-03-13 14:58 UTC\n"
+"POT-Creation-Date: 2022-03-13 15:18 UTC\n"
 "PO-Revision-Date: 2022-03-12 22:39+0100\n"
 "Last-Translator: Septim <septim@centrum.cz>\n"
 "Language-Team: Czech https://wiki.wesnoth.org/CzechTranslation\n"
@@ -883,12 +883,19 @@ msgstr "Obryně"
 #. [unit_type]: id=She Ogre, race=ogre
 #. reworded a bit:
 #: A_Little_Adventure/units/She_Ogre.cfg:24
+#, fuzzy
+#| msgid ""
+#| "A bit less stupid than their male counterparts, the ogre females spend "
+#| "the first part of their lives learning how use herbs and minerals to cure "
+#| "wound and poisons, and secondly, how to apply this knowledge to the male "
+#| "ogres. They don't like iron weapons, but rather, they efficently use "
+#| "small but hard clubs of wood, and leather slings, to defend themselves."
 msgid ""
 "A bit less stupid than their male counterparts, the ogre females spend the "
 "first part of their lives learning how use herbs and minerals to cure wound "
 "and poisons, and secondly, how to apply this knowledge to the male ogres. "
-"They don't like iron weapons, but rather, they efficently use small but hard "
-"clubs of wood, and leather slings, to defend themselves."
+"They don't like iron weapons, but rather, they efficiently use small but "
+"hard clubs of wood, and leather slings, to defend themselves."
 msgstr ""
 "Obryně jsou o něco chytřejší než jejich mužské protějšky. Tráví své mládí "
 "učením se, jak používat bylinky a minerály k léčení zranění a otrav, a pak "
