--- a/translations/wesnoth-ala.pot
+++ b/translations/wesnoth-ala.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-03-13 14:58 UTC\n"
+"POT-Creation-Date: 2022-03-13 15:18 UTC\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -750,7 +750,7 @@ msgstr ""
 #. [unit_type]: id=She Ogre, race=ogre
 #. reworded a bit:
 #: A_Little_Adventure/units/She_Ogre.cfg:24
-msgid "A bit less stupid than their male counterparts, the ogre females spend the first part of their lives learning how use herbs and minerals to cure wound and poisons, and secondly, how to apply this knowledge to the male ogres. They don't like iron weapons, but rather, they efficently use small but hard clubs of wood, and leather slings, to defend themselves."
+msgid "A bit less stupid than their male counterparts, the ogre females spend the first part of their lives learning how use herbs and minerals to cure wound and poisons, and secondly, how to apply this knowledge to the male ogres. They don't like iron weapons, but rather, they efficiently use small but hard clubs of wood, and leather slings, to defend themselves."
 msgstr ""
 
 #. [attack]: type=impact
