--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2304,7 +2304,7 @@ msgid ""
 msgstr ""
 "Okamžik, já znám ty modré a žluté standarty! To je kmen Gan-Tarkase! Ve "
 "Weldynu je jeho jméno dobře známé! Je jedním z nejmocnějších a "
-"nejautoritativnějších válečních vůdců. A přestože je oficiálně součástí "
+"nejautoritativnějších válečných vůdců. A přestože je oficiálně součástí "
 "Severní aliance, nikdy se nevzdal svých nároků na tyto pohraniční země, "
 "včetně těch, které jsme překročili, abychom dosáhli zátoky nereid. Pokud sem "
 "přišel, musí mít konkrétní záměr a nemyslím si, že je jím užívání si volného "
