--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2173,7 +2173,7 @@ msgid ""
 "outcome; our community is the smallest of all those present along the coasts "
 "of this continent."
 msgstr ""
-"Během nejchladnějších období se někdy na měsíc nebo dva stěhujeme jižněji "
+"Během nejchladnějších období se někdy na měsíc nebo dva stěhujeme "
 "do zátoky jižněji. Hlavně když je zde voda příliš studená, stejně jako "
 "minulou zimu! Když jsme se sem začátkem jara vrátili, našli jsme ještěráky "
 "už na ostrovech. Chtěli jsme je odehnat, protože ty ostrovy byly naše od té "
