--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2472,7 +2472,7 @@ msgid ""
 "were already willing to elude them at the first opportunity!"
 msgstr ""
 "Podívej! Připravil několik člunů naložených balvany, které potopili do řeky "
-"a vytvořily tak brod! Plánování a příprava této bitvy muselo trvat měsíce. "
+"a vytvořili tak brod! Plánování a příprava této bitvy musely trvat měsíce. "
 "Plánování hodné jeho slávy! A je také hodné neupřímnosti skřetů požadovat, "
 "aby Wesnoth respektoval smlouvy o říční plavbě, když je oni byli schopni při "
 "první příležitosti nedodržet!"
