--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3117,7 +3117,7 @@ msgstr ""
 "zjistil Glauko, že byl povýšen na generála, aniž by předtím sloužil jako "
 "důstojník. Když se ho král zeptal, do jaké posádky chce být přidělen, po "
 "krátkém zamyšlení odpověděl, že Amoran mu bude vyhovovat, protože je tam "
-"zase spousta práce a on nerad nechávám v půli cesty.\n"
+"zase spousta práce a on nerad nechává věci nedodělané.\n"
 "A v Amoranu čekalo mnoho práce. Ale Glauko, který byl také jmenován civilním "
 "guvernérem města a všech divokých zemí na východ od něj, ji dělal s "
 "nadšením, protože si to místo oblíbil a velká města na západě se mu teď "
