--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3168,7 +3168,7 @@ msgid ""
 "Ogre at least."
 msgstr ""
 "Glubtrubovi a jeho soukmenovcům od staré přepřahací stanice byly uděleny "
-"trvalé koncese na území, na kterém žili. Pouze Nereidy dostaly povolení "
+"trvalé koncese na území, na kterém žili. Pouze nereidy dostaly povolení "
 "překračovat toto území bez výslovného souhlasu obrů. Navíc, protože se "
 "vědělo, že ten, kdo zaútočil na obry, se bude muset vypořádat s obávaným "
 "hubitelem skřetů jménem Glauko, byl život kmene v následujících letech "
