--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3195,7 +3195,7 @@ msgid ""
 msgstr ""
 "Kroket se vrátil ke svému životu v lesích spolu se svou „přítelkyní“. Do "
 "Amoranu se ale vracel, kdykoli si chtěl s přáteli vypít dobré pivo a "
-"poklábosit o nějakých nezvyklostech, která by podle něj mohly Glauka zajímat."
+"poklábosit o nějakých nezvyklostech, které by podle něj mohly Glauka zajímat."
 
 #. [message]: speaker=Croquet
 #: A_Little_Adventure/utils/ALA_story.cfg:136
