--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3221,7 +3221,7 @@ msgid ""
 "personal defense, under penalty of expulsion from the territory."
 msgstr ""
 "Fangy zůstala s Glaukem až do konce bitvy proti Gan-Tarkasovi, protože tak "
-"by Kroket udělal. Pak zmizela a už ji nikdo nikdy neviděl! Glauko, který se "
+"by to Kroket udělal. Pak zmizela a už ji nikdo nikdy neviděl! Glauko, který se "
 "právě stal civilním guvernérem všech území na východě, na památku starého "
 "lovce nařídil pod trestem vyhnání z území absolutní zákaz zabíjení vlků na "
 "územích, která mu podléhala, s vyjímkou vlastní obrany."
