--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -2451,7 +2451,7 @@ msgid ""
 "stealthily, to take all these territories, and my tribe will become the most "
 "powerful tribe of orcs on the whole continent!"
 msgstr ""
-"Dobře vím, že se budou zlobit za zničení Amoranu. Ale se okamžitě stáhnu, "
+"Dobře vím, že se budou zlobit za zničení Amoranu. Ale okamžitě se stáhnu, "
 "budu se tvářit kajícně, řeknu, že jsem chtěl pomstít Grunta a odškodním "
 "Wesnoth trochou zlata. Ale mezitím tady na západě nebude nic, co by Wesnoth "
 "mohl mít zájem bránit. Časem se pokradmu vrátím, abych obsadil všechna tato "
