--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3269,7 +3269,7 @@ msgid ""
 "ready to hover in the sky and put his very sharp sight at disposal to find "
 "what or who had been missing."
 msgstr ""
-"Divaid a Ranfy se vrátili do svých lesů, brblajíc, že pomohli západním "
+"Divaid a Ranfy se vrátili do svých lesů, brblajíce, že pomohli západním "
 "wesnothským neurvalcům se vyhrabat z bídy. Ale ve skutečnosti to bylo jen "
 "takové mumlání pod fousy pro zachování formy. Protože když bylo něco "
 "ztraceno nebo se někdo ztratil v těch neznámých územích, Ranfy byl vždy "
