--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3270,7 +3270,7 @@ msgid ""
 "what or who had been missing."
 msgstr ""
 "Divaid a Ranfy se vrátili do svých lesů, brblajíce, že pomohli západním "
-"wesnothským neurvalcům se vyhrabat z bídy. Ale ve skutečnosti to bylo jen "
+"wesnothským neurvalcům vyhrabat se z bídy. Ale ve skutečnosti to bylo jen "
 "takové mumlání pod fousy pro zachování formy. Protože když bylo něco "
 "ztraceno nebo se někdo ztratil v těch neznámých územích, Ranfy byl vždy "
 "připraven vznést se k obloze a dát k dispozici svůj velmi ostrý zrak, aby "
