--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3274,7 +3274,7 @@ msgstr ""
 "takové mumlání pod fousy pro zachování formy. Protože když bylo něco "
 "ztraceno nebo se někdo ztratil v těch neznámých územích, Ranfy byl vždy "
 "připraven vznést se k obloze a dát k dispozici svůj velmi ostrý zrak, aby "
-"našel, to, co bylo ztraceno nebo toho, kdo byl nezvěstný."
+"našel to, co bylo ztraceno, nebo toho, kdo byl nezvěstný."
 
 #. [message]: speaker=Divaid
 #: A_Little_Adventure/utils/ALA_story.cfg:167
