--- a/translations/cs/LC_MESSAGES/wesnoth-ala.po
+++ b/translations/cs/LC_MESSAGES/wesnoth-ala.po
@@ -3301,7 +3301,7 @@ msgid ""
 "were considered citizens of Amoran like everyone else."
 msgstr ""
 "Ranfy zmizel hned poté, co skončila bitva proti Gan-Tarkasovi. O dva měsíce "
-"později se vrátil a ne sám. Udělal si hnízdo na jediné věži, která zbyla ze "
+"později se vrátil, a ne sám. Udělal si hnízdo na jediné věži, která zbyla ze "
 "starých zdí Amoranu. Občané byli zpočátku vyděšení, zvlášť když mnozí z nich "
 "nikdy předtím gryfy neviděli. Ale Glauco je uklidnil vysvětlením, že gryfové "
 "nepředstavují nebezpečí, ale spíše nejlepší stráže, které by Amoran mohl "
